# stock-predictor

./: .gitignore  data.py  manage.py  predictor.py  setup.cfg  setup.py
main/: apps.py  models.py  urls.py  views.py
model/: predictor.py
stock/: models.py  urls.py  views.py
stock_predictor/: asgi.py  settings.py  urls.py  wsgi.py
