[metadata]
name = attr: stock-price-predictor.__name__
version = attr: stock-price-predictor.__version__
description = A random forest implementation, used to predict wheter a stock while increase or decrease on the following day.
long_description = file: README.md
author = Harry Alexander Richards
author_email= harry_richards_@hotmail.co.uk
url = 

[options]
packages = find:
zip_safe = False
include_package_data=True
install_requires =
    pandas
    yfinance
    dateutil
    matplotlib
    scikit-learn

[options.entry_points]
console_scripts =
    predict-stock=